# doxie-gtk-app

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  compile-and-run.sh  compile.sh  process
data/: com.github.marinp1.gtk-doxie-app.appdata.xml  com.github.marinp1.gtk-doxie-app.desktop
debian/: changelog  control  copyright
po/: CMakeCache.txt  Makefile  cmake_install.cmake  com.github.marinp1.gtk-doxie-app.pot
po/po/: Makefile  cmake_install.cmake
src/: Application.vala  Variables.vala  action-bar.vala  custom-header-bar.vala  doxie-scanner.vala  main.vala  thumbnail.vala  variables.vala
src/Objects/: DoxieScanner.vala  Thumbnail.vala
src/Styles/: MainStyle.vala
src/Utils/: DoxieUtils.vala  GssdpUtils.vala  HttpUtil.vala  HttpUtils.vala
src/Widgets/: ActionBar.vala  ContentPlaceholder.vala  ContentStack.vala  CustomHeader.vala  CustomInfoBar.vala  PasswordPrompt.vala  ScanHolder.vala  Thumbnail.vala
src/libgssdp/: Makefile.in  gssdp-marshal.h
